# ModelDeployTRT

./: .gitignore  README.md  pyproject.toml  run.sh
inference/: infer_model.py  triton_handler.py
model_compilation/: Dockerfile  compile.sh
model_compilation/onnx_compilation/yolov9/: requirements.txt
model_compilation/onnx_compilation/yolov9/utils/: general.py
model_deployment/: Dockerfile  deploy.sh  requirements.txt
model_deployment/model_repository/postprocess/: config.pbtxt
model_deployment/model_repository/postprocess/0/: labels.json  model.py  yolo_utils.py
model_deployment/model_repository/postprocess/0/error_handling/: handle_triton_errors.py
model_deployment/model_repository/preprocess/: config.pbtxt
model_deployment/model_repository/preprocess/0/: model.py  yolo_utils.py
model_deployment/model_repository/preprocess/0/error_handling/: handle_triton_errors.py
model_deployment/model_repository/yolov9_model/: config.pbtxt
